# pyroglyph

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.rst  example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml
pyroglyph/: __init__.py  exceptions.py
